Desktop user no longer sees stretched out images on event listing (all and individual); add non-responsive logo to Desktop nav

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -63,13 +63,24 @@ body.events-page {
     font-size: .70em;
     font-weight: 500;
   }
-
+  .img-container{
+    width:300px;
+    position: relative;
+    margin-left:-150px;
+    left:50%;
+  }
 //align to top, float right. move star icon beneath
   .event_photo_index {
     height: 120px;
-    min-width: 100%;
+    min-width:105px;
+    display:block;
+    margin:0 auto;
   }
-
+  .photo-wrapper{
+    overflow: hidden;
+    max-width:100%;
+    padding-left:0;
+  }
   .event_photo_overlay {
     position: absolute;
     top: 0px;
@@ -198,10 +209,14 @@ $canvas-offset: .5;
     ========================================================================== */
 
 .nav-primary {
-
+  position:relative;
   background: #303030;
   @include off-canvas-nav;
-  
+  .af-events{
+    position:absolute;
+    left:10px;
+    top:5px;
+  }
   ul {
     text-align: left;
     padding-left: 0px;
@@ -271,6 +286,7 @@ $canvas-offset: .5;
 .back-button {
   width: 15px;
   height: 15px;
+  margin-left:-4px;
   background-image: url('back-button.svg');
   background-size: contain;
   /*vertical-align: text-bottom;*/
